fix text alignment on super small screens

--- a/style.css
+++ b/style.css
@@ -142,6 +142,7 @@ button:hover {
     display: flex;
     justify-content: center;
     align-items: center;
+    text-align: center;
     flex-direction: column;
     box-sizing: border-box;
 }
@@ -150,6 +151,7 @@ button:hover {
     position: absolute;
     display: flex;
     justify-content: center;
+    text-align: center;
     align-items: center;
     flex-direction: column;
     box-sizing: border-box;
@@ -161,6 +163,7 @@ button:hover {
     left: 0;
     display: flex;
     justify-content: center;
+    text-align: center;
     align-items: center;
     flex-direction: row;
     box-sizing: border-box;
@@ -221,6 +224,7 @@ button:hover {
     display: flex;
     justify-content: center;
     align-items: center;
+    text-align: center;
     flex-direction: row;
     flex-wrap: wrap;
     box-sizing: border-box;
@@ -233,6 +237,7 @@ button:hover {
     bottom: 20px;
     width: 100%;
     display: flex;
+    text-align: center;
     justify-content: space-between;
     flex-direction: row;
     box-sizing: border-box;
